# herdr-webui

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  OPTIMIZATION_BACKLOG.md  README.md  build.rs  builtint_backend.md  filetree_plan.md  flake.nix  justfile  package-lock.json  package.json  plan_mobile.md
.codebase-memory/: adr.md
.githooks/: commit-msg
.github/: dependabot.yml
.github/workflows/: ci.yml  cleanup-runs-and-releases.yml  pr-gate.yml  preview.yml  release.yml  webui-ci.yml  webui-release.yml
docs/: code-quality-audit.md  development.md  features.md  index.md  installation.md  release-notes.md  technical-details.md  tui-backend-api.md  ux-flow-proposal.md
nix/: package.nix
scripts/: build_wterm_assets.mjs  cleanup_gha_and_releases.py
src/: assets.rs  backend_client.rs  builtin_backend.rs  builtin_events.rs  compat.rs  file_browser.rs  git_ui.rs  lib.rs  main.rs  protocol.rs  service.rs  sound.rs  terminal_text.rs  terminal_theme.rs  tui.rs  tui_input.rs  tui_model.rs  tui_render.rs  tui_terminal.rs  tui_terminal_tests.rs  tui_tests.rs  tui_theme.rs  worktree.rs
src/api/schema/: worktrees.rs
src/app/: actions.rs  config_io.rs  mod.rs  state.rs  theme_sync.rs  worktrees.rs
src/app/api/: worktrees.rs
src/app/input/: mod.rs  modal.rs  mouse.rs  navigate.rs  settings.rs  terminal.rs
src/assets/: app.css  app.html  app.js  app_boot.js  app_boot.test.mjs  app_core.js  app_core.test.mjs  app_keyboard.test.mjs  app_load.test.mjs  core.js  login.css  login.js  mobile.css  mobile.js  mobile_core.js  mobile_load.test.mjs  mobile_settings.js  mobile_terminal.js  mobile_worktrees.js  temp_terminal.test.mjs  terminal_adapter.test.mjs  terminal_frame.test.mjs  terminal_scroll.test.mjs  xterm.css
src/assets/desktop/: app.css  app.js  directory_picker.css  directory_picker.js  file_browser.css  file_browser.js  git_ui.js  search.css  search.js  shortcuts.css
src/assets/desktop/app_css/: base.css  chrome.css  controls.css  modals.css  terminal.css  workspaces.css
src/assets/desktop/app_js/: bindings.js  core.js  keyboard.js  legacy_polling.js  panel_switcher.js  render.js  shortcuts.js  terminal.js  workspace_create.js  workspace_shell.js  worktrees.js
src/assets/desktop/git_ui/: actions.js  diff.css  entry.css  layout.css  log.css  log.js  log_actions.css  settings.js  shell.css  syntax.css  syntax.js
src/assets/fonts/: README.md
src/assets/mobile/: app.css  app.js  attention.js  file_browser.js  git.js  settings.js  terminal.js  worktrees.js
src/assets/shared/: actions.js  colors.css  content_search.css  core.js  editor.js  file_content_search.js  file_icons.css  file_icons.js  file_tree.css  file_tree.js  line_context.js  temp_terminal.js  terminal_adapter.js  terminal_filter.js  terminal_fit.js  terminal_scroll.js  workspace_search.js
src/config/: keybinds.rs  model.rs  sound.rs
src/ghostty/: mod.rs
src/git_ui/: branch.rs  cleanup.rs  conflict.rs  diff.rs  file.rs  log.rs  log_graph.rs  mod.rs  stash.rs
src/input/: encode.rs
src/pane/: terminal.rs
src/server/: clients.rs  headless.rs
src/ui/: dialogs.rs  keybind_help.rs  settings.rs
webui/: Cargo.toml  build.rs
webui/src/: main.rs
webui/src/assets/: app.css  app.html  app.js  app_boot.js  app_boot.test.mjs  app_core.js  app_load.test.mjs  login.html  mobile.css  mobile.js  mobile_attention.js  mobile_load.test.mjs  mobile_worktrees.js
