[package]
name = "herdr-webui"
# Static package version tracks the next WebUI SemVer; runtime builds use build.rs.
version = "0.2.22"
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/alecuba16/herdr-webui"
description = "Web UI for an existing Herdr server"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
bincode = { version = "2", features = ["serde"] }
interprocess = "2.4.2"
rcgen = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net", "signal"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
