[package]
name = "herdr-webui"
version = "0.0.1"
edition = "2021"
description = "Web UI for an existing Herdr server"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
bincode = { version = "2", features = ["serde"] }
interprocess = "2.4.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
